--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ketlyn e Mirian</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p><h1>Evolução da Tecnologia</h1></p>
+
+    <img id="imab" src="imab.webp"
 
     <p><b>Como se define a evolução tecnológica?</b> A Evolução Tecnológica é algo que sempre esteve presente na vida do homem. Abrange desde os primórdios até,
  e principalmente, os dias atuais. Cada vez aumenta mais sua relação com o homem,
@@ -14,7 +17,9 @@
 
  <p><b>E qual a importância?</b>Além de tornar mais fácil a rotina da sociedade, toda essa evolução também contribuiu na redução de gastos,
  principalmente para as empresas. Já que é possível usar a tecnologia para diminuir a mão de obra, agilizar os processos de vendas,
- melhorar o atendimento ao cliente, entre inúmeras outras possibilidades.</p>
+ melhorar o atendimento ao cliente, entre inúmeras outras possibilidades.</b></p>
+
+
 
 </body>
 </html>
