--- a/index.html
+++ b/index.html
@@ -7,17 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p><h1>Evolução da Tecnologia</h1></p>
+    <p><h1>Doce Harmonia</h1></p>
 
     <img id="imab" src="imab.webp"
 
-    <p><b>Como se define a evolução tecnológica?</b> A Evolução Tecnológica é algo que sempre esteve presente na vida do homem. Abrange desde os primórdios até,
- e principalmente, os dias atuais. Cada vez aumenta mais sua relação com o homem,
- e cada vez aumenta mais seu ritmo de evolução.</p>
+    <p><b>Uma marca de doces que busca harmonia em cada momento doce.</b></p>
 
- <p><b>E qual a importância?</b>Além de tornar mais fácil a rotina da sociedade, toda essa evolução também contribuiu na redução de gastos,
- principalmente para as empresas. Já que é possível usar a tecnologia para diminuir a mão de obra, agilizar os processos de vendas,
- melhorar o atendimento ao cliente, entre inúmeras outras possibilidades.</b></p>
+    <p><b>Doce Harmonia</b>é uma loja de doces que oferece uma variedade de produtos 
+        deliciosos para satisfazer o seu paladar. Com um ambiente aconchegante e uma equipe de 
+        atendimento personalizado, nossa loja é o lugar perfeito para quem deseja desfrutar de uma
+        experiência doce repleta de sabor e satisfação.</p>
+
+    <p><b>Cardápio Doce Harmonia</b></p>
+
+    <p><i></i>| Cheesecake de Caramelo 1 Kg |</i></p> 
+    <p>R$ 44,98</p>
+
+    <p><i>| Red Velvet 1 Kg |</i></p>
+    <p>R$ 31,90</p>
+
+    <p><i>| Bolo de Chocolate 1 kg |</i></p>
+    <p>R$ 25,00</p>
+
+    <p><i>| Pão de Queijo Grande 500 g |</i></p>
+    <p>R$ 6,90</p>
+
+    <p><i>| Bolo de Laranja 1 Kg |</i></p>
+    <p>R$ 22,00</p>
+
+    <p><i>| Bolo de Limão 1 Kg |</i></p>
+    <p>R$ 22,00</p>
+
+    <p><i>| Macaron 300 g| </i></p>
+    <p>R$ 4,99</p>
+ 
+
+
 
 
 
